--- a/modules/govuk_jenkins/templates/jobs/search_reindex_with_new_schema.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/search_reindex_with_new_schema.yaml.erb
@@ -16,13 +16,7 @@
           days-to-keep: 30
           artifact-num-to-keep: 5
     builders:
-      - trigger-builds:
-          - project: run-rake-task
-            block: true
-            predefined-parameters: |
-              TARGET_APPLICATION=rummager
-              MACHINE_CLASS=search
-              RAKE_TASK="rummager:migrate_schema CONFIRM_INDEX_MIGRATION_START=1 RUMMAGER_INDEX=all"
+        - shell: ssh deploy@$(govuk_node_list -c search --single-node) "cd /var/apps/rummager && govuk_setenv rummager bundle exec rake rummager:migrate_schema CONFIRM_INDEX_MIGRATION_START=1 RUMMAGER_INDEX=all"
     wrappers:
       - ansicolor:
           colormap: xterm
