--- a/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
@@ -32,13 +32,16 @@
               export AWS_REGION=eu-west-1
               export GIT_ORIGIN_PREFIX="https://git-codecommit.${AWS_REGION}.amazonaws.com/v1/repos"
               export APP_DEPLOYMENT_GIT_URL="${GIT_ORIGIN_PREFIX}/govuk-app-deployment"
+              export APP_DEPLOYMENT_SECRET_GIT_URL="${GIT_ORIGIN_PREFIX}/govuk-app-deployment-secrets"
               git config --global credential.helper '!aws codecommit credential-helper $@'
               git config --global credential.UseHttpPath true
             else
               export APP_DEPLOYMENT_GIT_URL="git@github.com:alphagov/govuk-app-deployment.git"
+              export APP_DEPLOYMENT_SECRET_GIT_URL="git@github.com:alphagov/govuk-app-deployment-secrets.git"
             fi
 
             git clone ${APP_DEPLOYMENT_GIT_URL} --branch master --single-branch --depth 1 ./
+            git clone ${APP_DEPLOYMENT_SECRET_GIT_URL} --branch master --single-branch --depth 1 ./secrets
             ./jenkins.sh
     publishers:
         - trigger:
