Enable scraping alerts job in all environments
This makes it easier to test changes because we can try them
before deploying to production.

I've configured the job to not run automatically in the other
environments.

--- a/modules/govuk_jenkins/templates/jobs/scrape_icinga_alerts_for_dashboard_metrics.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/scrape_icinga_alerts_for_dashboard_metrics.yaml.erb
@@ -18,9 +18,11 @@
     logrotate:
         numToKeep: 10
     triggers:
-        - timed: |
-            TZ=Europe/London
-            0 7 1 * *
+      <% if @run_monthly %>
+      - timed: |
+          TZ=Europe/London
+          0 7 1 * *
+      <% end %>
     properties:
       - build-discarder:
           days-to-keep: 30
