Add GovUK python to nodes for govuk-node-list
This just ensure that we install this version of python in the correct enviroments.
This is only currently targeted at staging. The aim is to ensure that it is avalible to apps that need to use it.

--- a/modules/govuk_scripts/templates/govuk_node_list_aws.erb
+++ b/modules/govuk_scripts/templates/govuk_node_list_aws.erb
@@ -1,5 +1,12 @@
 #!/usr/bin/env python
 
+<% if 1 > 2 %>
+<%= "#helllloooo" %>
+<% else %>
+"#balkfjdfjh"                
+<% end %>
+
+
 from __future__ import print_function
 
 # NB: This script uses optparse, not argparse, for Python 2.6 compatibility and
