Add sync job for Content Publisher assets

--- a/modules/govuk_jenkins/templates/jobs/copy_data_from_staging_to_aws.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_from_staging_to_aws.yaml.erb
@@ -82,6 +82,7 @@
                 - all
                 - attachments
                 - assets
+                - content-publisher
                 - elasticsearch-rummager
                 - mongo-api
                 - mongo-normal
