--- a/modules/govuk_jenkins/templates/jobs/copy_data_to_integration.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_to_integration.yaml.erb
@@ -101,6 +101,7 @@
             choices:
                 - all
                 - assets
+                - content-publisher
                 - elasticsearch-rummager
                 - mongo-api
                 - mongo-exceptions
