--- a/modules/govuk_jenkins/templates/jobs/copy_data_to_staging.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_to_staging.yaml.erb
@@ -113,6 +113,7 @@
             choices:
                 - all
                 - assets
+                - content-publisher
                 - elasticsearch-rummager
                 - mongo-api
                 - mongo-exceptions
