--- a/modules/govuk_scripts/templates/govuk_node_list_aws.erb
+++ b/modules/govuk_scripts/templates/govuk_node_list_aws.erb
@@ -1,4 +1,6 @@
-#!/usr/bin/env python
+#!/usr/bin/python3
+# We have set this to python 3 to aviod boto3 
+# compatability issues when using 2.7.14
 
 from __future__ import print_function
 
@@ -9,10 +11,11 @@ import json
 import random
 import string
 import sys
-import urllib
-import urllib2
+import urllib3
 import boto3
+from urllib.parse import urlencode
 
+### Variables
 stackname = '<%= @aws_stackname -%>'
 region = '<%= @aws_region -%>'
 
@@ -159,4 +162,3 @@ parser.add_option(
 
 if __name__ == '__main__':
     main()
-
