--- a/modules/govuk_scripts/templates/govuk_node_list_aws.erb
+++ b/modules/govuk_scripts/templates/govuk_node_list_aws.erb
@@ -1,5 +1,4 @@
-#!/usr/bin/env python
-
+#!/usr/bin/python3
 from __future__ import print_function
 
 # NB: This script uses optparse, not argparse, for Python 2.6 compatibility and
@@ -10,7 +9,6 @@ import random
 import string
 import sys
 import urllib
-import urllib2
 import boto3
 
 stackname = '<%= @aws_stackname -%>'
@@ -50,17 +48,17 @@ def ec2_classes(stackname):
     client = boto3.client('ec2', region_name=region)
 
     response = client.describe_instances(
-           Filters=[
-              {'Name': 'tag:aws_stackname', 'Values': [stackname]},
-              {'Name': 'instance-state-name','Values': ['running']}
-           ]
-       )
+            Filters=[
+                {'Name': 'tag:aws_stackname', 'Values': [stackname]},
+                {'Name': 'instance-state-name','Values': ['running']}
+            ]
+        )
 
     nodes = response['Reservations']
 
     classes = []
     for instance in nodes:
-        classes.append(filter(lambda t: t['Key'] == 'aws_migration', instance['Instances'][0]['Tags'])[0]['Value'])
+            classes.append(list(filter(lambda t: t['Key'] == 'aws_migration', instance['Instances'][0]['Tags']))[0]['Value'])
 
     return(sorted(set(classes)))
 
@@ -102,12 +100,13 @@ def main():
             '["=", "title", "{0}"]'.format(c)
             for c in classes
         ]
+
         class_query = '["or", {0}]'.format(', '.join(classes))
         query = '["and", ["=", "type", "Class"], {0}]'.format(class_query)
 
-        qs = urllib.urlencode({'query': query})
-        res = urllib2.urlopen('https://puppetdb.<%= @app_domain_internal %>/v2/{0}?{1}'.format(endpoint, qs))
-        instance_ids = json.load(res)
+        qs = urllib.parse.urlencode({'query': query})
+        res = urllib.request.urlopen('https://puppetdb.<%= @app_domain_internal %>/v2/{0}?{1}'.format(endpoint, qs))
+        instance_ids = json.loads(res.read().decode('utf-8'))
 
         hosts = []
 
@@ -122,6 +121,7 @@ def main():
 
     for host in hosts:
         print(host)
+
 
 parser = OptionParser(description='List nodes in this environment')
 
