Allow govuk sync script to work in jenkins
The Govuk sync script is broken and is not able to run on the jenkins agents.
Ensure's that the session sudo's with the correct user.

- Ensure that the sudo rule exists for jenkins to run data jobs
- Add correct sudoers permissions for govuk user
- Fix sudoers to ensure that the service persists

--- a/modules/govuk_jenkins/templates/jobs/data_sync.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/data_sync.yaml.erb
@@ -18,7 +18,7 @@
             ssh deploy@${SYNC_HOST} \
             "/usr/bin/setlock /etc/unattended-reboot/no-reboot/govuk_env_sync \
              /usr/bin/envdir /etc/govuk_env_sync/env.d \
-             /usr/local/bin/govuk_env_sync.sh \
+             sudo -u govuk-backup /usr/local/bin/govuk_env_sync.sh \
              ${ARG_CONFIGFILE} \
              -a ${SYNC_ACTION} \
              -D ${SYNC_DBMS} \
