--- a/modules/govuk_scripts/templates/govuk_node_list_aws.erb
+++ b/modules/govuk_scripts/templates/govuk_node_list_aws.erb
@@ -1,7 +1,4 @@
-#!/usr/bin/env python
-
-from __future__ import print_function
-
+#!/usr/bin/python3
 # NB: This script uses optparse, not argparse, for Python 2.6 compatibility and
 # to avoid the need to depend on any other packages.
 from optparse import OptionParser
@@ -10,7 +7,6 @@ import random
 import string
 import sys
 import urllib
-import urllib2
 import boto3
 
 stackname = '<%= @aws_stackname -%>'
@@ -60,7 +56,7 @@ def ec2_classes(stackname):
 
     classes = []
     for instance in nodes:
-        classes.append(filter(lambda t: t['Key'] == 'aws_migration', instance['Instances'][0]['Tags'])[0]['Value'])
+        classes.append(list(filter(lambda t: t['Key'] == 'aws_migration', instance['Instances'][0]['Tags']))[0]['Value'])
 
     return(sorted(set(classes)))
 
@@ -105,9 +101,9 @@ def main():
         class_query = '["or", {0}]'.format(', '.join(classes))
         query = '["and", ["=", "type", "Class"], {0}]'.format(class_query)
 
-        qs = urllib.urlencode({'query': query})
-        res = urllib2.urlopen('https://puppetdb.<%= @app_domain_internal %>/v2/{0}?{1}'.format(endpoint, qs))
-        instance_ids = json.load(res)
+        qs = urllib.parse.urlencode({'query': query})
+        res = urllib.request.urlopen('https://puppetdb.<%= @app_domain_internal %>/v2/{0}?{1}'.format(endpoint, qs))
+        instance_ids = json.loads(res.read().decode('utf-8'))
 
         hosts = []
 
@@ -159,4 +155,3 @@ parser.add_option(
 
 if __name__ == '__main__':
     main()
-
