--- a/modules/govuk/templates/ckan/ckan.ini.erb
+++ b/modules/govuk/templates/ckan/ckan.ini.erb
@@ -67,6 +67,9 @@ ckan.auth.roles_that_cascade_to_sub_groups = admin
 ## User Account Creation Setting
 ckan.valid_email_regexes = .gov.uk$ .nhs.uk$ .nhs.net$ .ac.uk$ .os.uk$ .mod.uk$ .police.uk$ .bl.uk$
 
+## Google Analytics
+ckan.google_analytics_tracking_id = UA-10855508-1
+
 ## Search Settings
 
 ckan.site_id = dgu
