--- a/modules/postfix/templates/etc/postfix/main.cf.erb
+++ b/modules/postfix/templates/etc/postfix/main.cf.erb
@@ -32,14 +32,14 @@ alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
 myorigin = /etc/mailname
 mydestination = <%= @fqdn -%>, localhost.<%= @domain -%>, , localhost
-relayhost = <% unless @smarthost == '' -%><%= [@smarthost].flatten.first -%><% end %>
+relayhost = <% unless ['', nil].include?(@smarthost) -%><%= [@smarthost].flatten.first -%><% end %>
 mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 mailbox_size_limit = 0
 recipient_delimiter = +
 inet_interfaces = loopback-only
-<% unless @smarthost == '' -%>
+<% unless ['', nil].include?(@smarthost) -%>
 
-<% unless (@smarthost_user == '' and @smarthost_pass == '') -%>
+<% unless (['', nil].include?(@smarthost_user) && ['', nil].include?(@smarthost_pass)) -%>
 smtp_sasl_auth_enable = yes
 smtp_sasl_security_options = noanonymous
 smtp_sasl_password_maps = hash:/etc/postfix/sasl_passwd
