Fix defaults handling in mongo node priority config script
Under the Puppet future parser, this template was failing to compile. Change
how we fall back to default parameters in order to surivive. In the future, we
can merge defaults into the hash before passing the hash into the template
which will make things simpler.

--- a/modules/mongodb/templates/configure-node-priority.js.erb
+++ b/modules/mongodb/templates/configure-node-priority.js.erb
@@ -1,9 +1,11 @@
 var expectedReplicaSetMembers = [
-  <%- @members.each do |host, properties| -%>
+  <%-
+    @members.each do |host, properties|
+      properties ||= {} -%>
     {
       host: '<%= host %>:27017',
-      priority: <%= properties ? properties.fetch('priority', 1) : 1 %>,
-      hidden: <%= properties ? properties.fetch('hidden', false) : false %>,
+      priority: <%= properties['priority'] || 1 %>,
+      hidden: <%= properties['hidden'] || false %>,
     },
   <%- end -%>
 ]
