Change the branch name for app secrets
You can’t deploy a branch of govuk-app-deployment-secrets.
This change allows us to test changes to the business readiness finder before merging
the changes into master, by getting puppet to temporarily read config in from different branch.

--- a/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
@@ -39,7 +39,7 @@
             fi
 
             git clone ${APP_DEPLOYMENT_GIT_URL} --branch master --single-branch --depth 1 ./
-            git clone ${APP_DEPLOYMENT_SECRET_GIT_URL} --branch master --single-branch --depth 1 ./secrets
+            git clone ${APP_DEPLOYMENT_SECRET_GIT_URL} --branch "show-facet-tags-on-business-readiness-finder" --single-branch --depth 1 ./secrets
             ./jenkins.sh
     publishers:
         - trigger:
