Change the Deployment dashboards to be called Application dashboards
Following on from the name changes in the govuk-puppet code.

--- a/modules/grafana/templates/dashboards/application_dashboard_template.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_template.json.erb
@@ -1,6 +1,6 @@
 {
   "id": 29,
-  "title": "Deployment dashboard - <%= @app_name %>",
+  "title": "Application dashboard - <%= @app_name %>",
   "tags": [],
   "style": "dark",
   "timezone": "browser",
