Remove some of the time overrides from the dashboard panels
This makes the application dashboards more generally useful and
consistent, as you can change the timeperiod for more panels by the
usual means.

--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_processor_count.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_processor_count.json.erb
@@ -59,7 +59,7 @@
     }
   ],
   "thresholds": [],
-  "timeFrom": "15m",
+  "timeFrom": null,
   "timeShift": null,
   "title": "Processes",
   "tooltip": {
