--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times_by_controller_action.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times_by_controller_action.json.erb
@@ -89,7 +89,7 @@
       "timeField": "@timestamp"
     }
   ],
-  "timeFrom": "6h",
+  "timeFrom": null,
   "timeShift": null,
   "title": "90th Percentile Response Time by Controller and Action",
   "tooltip": {
