--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_errors_by_controller_action.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_errors_by_controller_action.json.erb
@@ -84,7 +84,7 @@
       "timeField": "@timestamp"
     }
   ],
-  "timeFrom": "6h",
+  "timeFrom": null,
   "timeShift": null,
   "title": "Top 10 Error Count by Controller and Action",
   "tooltip": {
