Trello-1951: email-alert-api nginx config
This will allow the nginx load balancer that runs on the backend-lbs in
carrenza to accept connections from our AWS nat gateways, this is
required for migrating the frontends to AWS.

Also making a change to allow internal ranges to be able to connect if
we allow AWS ranges to connect.

@ronocg <conor.glynn@digital.cabinet-office.gov.uk>

--- a/modules/loadbalancer/templates/nginx_balance_no_ssl.conf.erb
+++ b/modules/loadbalancer/templates/nginx_balance_no_ssl.conf.erb
@@ -73,10 +73,12 @@ server {
     allow 127.0.0.1;
     deny all;
     <%- elsif @aws_egress_nat_ips -%>
-    # Only accept connnections from AWS Environment
+    # Only accept connnections from AWS Environment and internal machines
     <%- [@aws_egress_nat_ips].flatten.each do |ip| -%>
     allow <%= ip %>;
     <%- end -%>
+    allow 10.0.0.0/8;
+    allow 127.0.0.1;
     deny all;
     <%- end -%> 
     include includes/maintenance.conf;
