Make jenkins job name more descriptive

--- a/modules/govuk_jenkins/templates/jobs/run_metadata_tagger.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/run_metadata_tagger.yaml.erb
@@ -1,7 +1,7 @@
 ---
 - job:
-    name: Run_Metadata_Tagger
-    display-name: Run_Metadata_Tagger
+    name: Run_Rummager_Metadata_Tagger
+    display-name: Run_Rummager_Metadata_Tagger
     project-type: freestyle
     description: "This job SSHs onto a search backend and runs the rake task 'govuk_setenv rummager bundle exec rake tag_metadata'"
     properties:
