Add GOVUK_APP_DOMAIN env var for publish special routes
This commit adds the `GOVUK_APP_DOMAIN` environment variable for the “Publish special routes” Jenkins job, so Plek can find the Publishing API correctly.

--- a/modules/govuk_jenkins/templates/jobs/publish_special_routes.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/publish_special_routes.yaml.erb
@@ -25,6 +25,7 @@
       - special-route-publisher_Publish_Special_Routes
     builders:
         - shell: |
+            export GOVUK_APP_DOMAIN=<%= @app_domain %>
             export PUBLISHING_API_BEARER_TOKEN=<%= @publishing_api_bearer_token %>
             bundle install --path "${HOME}/bundles/${JOB_NAME}"
             bundle exec rake publish_special_routes
