Run smokey after deploying CDN
This causes Smokey to run after the CDN is deployed. Because Smokey now
uses Fastly as well, this should give us more confidence when deploying
to staging.

--- a/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
@@ -41,6 +41,9 @@
           notify-repeatedfailure: false
           include-test-summary: false
           room: <%= @slack_room %>
+      - trigger:
+          project: Smokey
+          threshold: SUCCESS
     wrappers:
         - ansicolor:
             colormap: xterm
