--- a/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
@@ -43,6 +43,9 @@
           include-test-summary: false
           room: <%= @slack_room %>
       <% end %>
+      - trigger:
+          project: Smokey
+          threshold: SUCCESS
     wrappers:
         - ansicolor:
             colormap: xterm
