Collect file descriptors per process for Collectd
This allows us to see how many files a particular process has open over
time.

--- a/modules/collectd/templates/etc/collectd/conf.d/process.conf.erb
+++ b/modules/collectd/templates/etc/collectd/conf.d/process.conf.erb
@@ -1,4 +1,7 @@
 <Plugin Processes>
+<% if @collect_file_descriptor -%>
+  CollectFileDescriptor true
+<%end -%>
 <% if @regex == '' -%>
   Process "<%= @title -%>"
 <% else -%>
