Use consistent naming for CDN Jenkins jobs

--- a/modules/govuk_jenkins/templates/jobs/bouncer_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/bouncer_cdn.yaml.erb
@@ -9,7 +9,7 @@
 
 - job:
     name: Bouncer_CDN
-    display-name: Bouncer_CDN
+    display-name: "CDN: deploy Bouncer configs"
     project-type: freestyle
     description: "After a loading new site config into the Transition app, this job will make sure that the traffic hitting the CDN for those domains is routed to Bouncer."
     properties:
