--- a/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
@@ -12,7 +12,7 @@
 
 - job:
     name: Deploy_CDN
-    display-name: Deploy_CDN
+    display-name: "CDN: deploy service"
     project-type: freestyle
     properties:
         - build-discarder:
