--- a/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
@@ -12,7 +12,7 @@
 
 - job:
     name: Update_CDN_Dictionaries
-    display-name: Update CDN dictionaries
+    display-name: "CDN: update dictionaries"
     project-type: freestyle
     properties:
         - build-discarder:
