Use the new location for the deploy shell script
Changed in https://github.com/alphagov/govuk-cdn-config/pull/109.

--- a/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
@@ -25,7 +25,7 @@
     builders:
         - shell: |
             export ENVIRONMENT=<%= @environment %>
-            ./jenkins.sh
+            ./deploy-service.sh
     publishers:
       <% if @enable_slack_notifications %>
       - slack:
