--- a/modules/govuk/templates/node/s_backend_lb/draft-assets-carrenza.conf.erb
+++ b/modules/govuk/templates/node/s_backend_lb/draft-assets-carrenza.conf.erb
@@ -25,9 +25,9 @@ server {
   proxy_set_header X-Forwarded-Host $host;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-<% if @real_ip_header != '' -%>
+<% if @assets_carrenza_real_ip_header != '' -%>
   # use an unspoofable header from an upstream cdn or l7 load balancer.
-  real_ip_header <%= @real_ip_header -%>;
+  real_ip_header <%= @assets_carrenza_real_ip_header -%>;
   real_ip_recursive on;
   set_real_ip_from 0.0.0.0/0;
 
