--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_registry_request_time.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_registry_request_time.json.erb
@@ -33,12 +33,12 @@
   "renderer": "flot",
   "yaxes": [
     {
-      "label": "ms",
+      "label": "",
       "show": true,
       "logBase": 1,
       "min": null,
       "max": null,
-      "format": "short"
+      "format": "ms"
     },
     {
       "label": null,
