fix icinga reboot formatting

--- a/modules/govuk_scripts/templates/govuk_node_list_aws.erb
+++ b/modules/govuk_scripts/templates/govuk_node_list_aws.erb
@@ -42,6 +42,25 @@ def ec2_nodes(stackname, nodeclass=None):
 
     return(hosts)
 
+def ec2_nodes_list(stackname):
+    client = boto3.client('ec2', region_name=region)
+
+    response = client.describe_instances(
+                   Filters=[
+                          {'Name': 'tag:aws_stackname', 'Values': [stackname]},
+                          {'Name': 'instance-state-name','Values': ['running']}
+                   ]
+               )
+
+    nodes = response['Reservations']
+
+    hosts = []
+    for instance in nodes:
+        node_name=list(filter(lambda t: t['Key'] == 'aws_hostname', instance['Instances'][0]['Tags']))[0]['Value']
+        hosts.append((instance['Instances'][0]['PrivateDnsName']+":"+node_name))
+
+    return(hosts)
+
 def ec2_classes(stackname):
     client = boto3.client('ec2', region_name=region)
 
@@ -110,6 +129,9 @@ def main():
         for instance in instance_ids:
             hosts.append(get_hostname_by_id(instance[host_key]))
 
+    elif opts.list:
+        hosts = ec2_nodes_list(stackname)
+
     else:
         hosts = ec2_nodes(stackname)
 
@@ -151,6 +173,13 @@ parser.add_option(
     help='List the available classes',
     action='store_true',
     dest='classes',
+)
+
+parser.add_option(
+    '--list',
+    help='List the nodes in the format of aws_fqdn:name',
+    action='store_true',
+    dest='list',
 )
 
 if __name__ == '__main__':
