Allow DBPASSWORD to be passed into the govuk_env_sync script

--- a/modules/govuk_env_sync/templates/govuk_env_sync_job.conf.erb
+++ b/modules/govuk_env_sync/templates/govuk_env_sync_job.conf.erb
@@ -5,3 +5,7 @@ temppath="<%= @temppath %>"
 database="<%= @database %>"
 url="<%= @url %>"
 path="<%= @path %>"
+
+<% if @db_password %>
+db_password="<%= @db_password %>"
+<% end %>
