--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_rummager_request_time.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_rummager_request_time.json.erb
@@ -1,27 +1,23 @@
 {
-  "id": 13,
-  "title": "Rummager Upper Request Time",
+  "id": 4,
+  "title": "Rummager Request Time",
   "span": 4,
   "type": "graph",
   "targets": [
     {
       "refId": "A",
-      "target": "alias(percentileOfSeries(stats.timers.govuk.app.<%= @app_name %>.*.rummager.finder_batch_search.upper, 100, false), 'Finder Batch Search')",
-      "hide": false,
-      "textEditor": false
+      "target": "alias(maxSeries(stats.timers.govuk.app.<%= @app_name %>.*.rummager.site_search.upper_90), 'Site Search')"
     },
     {
       "refId": "B",
-      "target": "alias(percentileOfSeries(stats.timers.govuk.app.<%= @app_name %>.*.rummager.site_search.upper, 100, false), 'Site Search')",
-      "hide": false,
-      "textEditor": false
+      "target": "alias(maxSeries(stats.timers.govuk.app.<%= @app_name %>.*.rummager.finder_batch_search.upper_90), 'Finder Batch Search')"
     }
   ],
   "datasource": "Graphite",
   "renderer": "flot",
   "yaxes": [
     {
-      "label": "",
+      "label": null,
       "show": true,
       "logBase": 1,
       "min": null,
@@ -62,11 +58,7 @@
     "max": false,
     "current": false,
     "total": false,
-    "avg": false,
-    "alignAsTable": false,
-    "rightSide": false,
-    "hideZero": false,
-    "hideEmpty": false
+    "avg": false
   },
   "nullPointMode": "null",
   "steppedLine": false,
@@ -80,6 +72,5 @@
   "aliasColors": {},
   "seriesOverrides": [],
   "thresholds": [],
-  "links": [],
-  "transparent": false
+  "links": []
 }
