--- a/modules/govuk_jenkins/templates/jobs/enhanced_ecommerce.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/enhanced_ecommerce.yaml.erb
@@ -13,13 +13,13 @@
           - project: run-rake-task
             block: true
             predefined-parameters: |
-              TARGET_APPLICATION=rummager
+              TARGET_APPLICATION=<%= @target_application %>
               MACHINE_CLASS=search
               RAKE_TASK="analytics:create_data_import_csv[/data/export/enhanced_ecommerce]"
           - project: run-rake-task
             block: true
             predefined-parameters: |
-              TARGET_APPLICATION=rummager
+              TARGET_APPLICATION=<%= @target_application %>
               MACHINE_CLASS=search
               RAKE_TASK="analytics:delete_old_files[/data/export/enhanced_ecommerce,10]"
     triggers:
