--- a/modules/govuk_jenkins/templates/jobs/run_metadata_tagger.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/run_metadata_tagger.yaml.erb
@@ -1,9 +1,9 @@
 ---
 - job:
-    name: Run_Rummager_Metadata_Tagger
-    display-name: Run_Rummager_Metadata_Tagger
+    name: <%= @job_name %>
+    display-name: <%= @job_name %>
     project-type: freestyle
-    description: "This job SSHs onto a search backend and runs the rake task 'govuk_setenv rummager bundle exec rake tag_metadata'"
+    description: "This job SSHs onto a search backend and runs the rake task 'govuk_setenv <%= @target_application %> bundle exec rake tag_metadata'"
     properties:
       - build-discarder:
           days-to-keep: 7
@@ -13,7 +13,7 @@
           - project: run-rake-task
             block: true
             predefined-parameters: |
-              TARGET_APPLICATION=rummager
+              TARGET_APPLICATION=<%= @target_application %>
               MACHINE_CLASS=search
               RAKE_TASK=tag_metadata
     triggers:
