Remove rummager dashboards

--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_search_api_request_time.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_search_api_request_time.json.erb
@@ -1,6 +1,6 @@
 {
   "id": 4,
-  "title": "Rummager Request Time",
+  "title": "Search API Request Time",
   "span": 4,
   "type": "graph",
   "targets": [
