Change search jenkins jobs to use new rake task names

--- a/modules/govuk_jenkins/templates/jobs/search_index_checks.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/search_index_checks.yaml.erb
@@ -20,7 +20,7 @@
             predefined-parameters: |
               TARGET_APPLICATION=<%= @target_application %>
               MACHINE_CLASS=search
-              RAKE_TASK=rummager:monitor_indices
+              RAKE_TASK=search:monitor_indices
     wrappers:
       - ansicolor:
           colormap: xterm
