Update to the 2.1.1 release of icinga-slack-webbook
This includes improved output and display for the Slack messages. The
Slack Icinga contact configuration is updated accordingly.

The $HOSTNAME$ as well as the $HOSTDISPLAYNAME$ is passed to the
icinga_slack_webhook_notify script, so that it can construct the URL
to the extinfo.cgi page for a service alert.

--- a/modules/icinga/templates/slack_contact.cfg.erb
+++ b/modules/icinga/templates/slack_contact.cfg.erb
@@ -16,10 +16,10 @@ define contact {
 
 define command{
     command_name    <%= notify_host_command %>
-    command_line    /usr/local/bin/icinga_slack_webhook_notify -u <%= @slack_webhook_url %> -c '<%= @slack_channel %>' -U '<%= @slack_username %>' -m '$HOSTDISPLAYNAME$ is $HOSTSTATE$' -H '$HOSTDISPLAYNAME$' -A '$HOSTACTIONURL$' -N '$HOSTNOTESURL$' -S '<%= @nagios_cgi_url %>'
+    command_line    /usr/local/bin/icinga_slack_webhook_notify -u <%= @slack_webhook_url %> -c '<%= @slack_channel %>' -U '<%= @slack_username %>' -m '$HOSTDISPLAYNAME$ is $HOSTSTATE$' --host '$HOSTNAME$' --host-display-name '$HOSTDISPLAYNAME$' -A '$HOSTACTIONURL$' -N '$HOSTNOTESURL$' --host-state $HOSTSTATE$ -S '<%= @icinga_status_cgi_url %>' --extinfo-cgi-url '<%= @nagios_extinfo_cgi_url %>'
 }
 
 define command{
     command_name    <%= notify_service_command %>
-    command_line    /usr/local/bin/icinga_slack_webhook_notify -u <%= @slack_webhook_url %> -c '<%= @slack_channel %>' -U '<%= @slack_username %>' -m '$SERVICEDESC$' -H '$HOSTDISPLAYNAME$' -A '$SERVICEACTIONURL$' -N '$SERVICENOTESURL$' -L $SERVICESTATE$ -S '<%= @nagios_cgi_url %>'
+    command_line    /usr/local/bin/icinga_slack_webhook_notify -u <%= @slack_webhook_url %> -c '<%= @slack_channel %>' -U '<%= @slack_username %>' -m '$SERVICEDESC$' --host '$HOSTNAME$' --host-display-name '$HOSTDISPLAYNAME$' -A '$SERVICEACTIONURL$' -N '$SERVICENOTESURL$' -L $SERVICESTATE$ -S '<%= @icinga_status_cgi_url %>' --extinfo-cgi-url '<%= @nagios_extinfo_cgi_url %>'
 }
