Fix undefined variable error when checking STATUS

--- a/modules/govuk/templates/node/s_asset_base/copy-attachments-to-slaves.sh.erb
+++ b/modules/govuk/templates/node/s_asset_base/copy-attachments-to-slaves.sh.erb
@@ -52,7 +52,7 @@ for FILELIST in $(find $FILELIST_DIR -type f); do
   rm -f $FILELIST
 done
 
-if [ -z $STATUS ]; then
+if [ -z "${STATUS:-}" ]; then
   STATUS=0
 fi
 
