Set transition s3 bucket via parameter
This was previously hardcoded to the production bucket as this task was
only run in the production environment.

--- a/modules/govuk_jenkins/templates/jobs/transition_import_hits.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/transition_import_hits.yaml.erb
@@ -21,7 +21,7 @@
         - string:
             name: BUCKET
             description: 'S3 bucket to fetch bouncer logs from'
-            default: 'govuk-production-transition-fastly-logs'
+            default: <%= @s3_bucket %>
     triggers:
         - timed: |
             TZ=Europe/London
