Make it clearer you can deploy branches
It's not clear that you can use a branch name here because the term
"commitish" is not well known.

--- a/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
@@ -83,7 +83,7 @@
                 - app:migrate_and_hard_restart
         - string:
             name: TAG
-            description: Git tag/committish to deploy.
+            description: Git commit-ish (tag, branch name, commit hash) to deploy.
             default: release
         - bool:
             name: DEPLOY_FROM_AWS_CODECOMMIT
