Add alerting to transition import hits job
This job has been failing since the 5th July and we didn't notice.

--- a/modules/govuk_jenkins/templates/jobs/transition_import_hits.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/transition_import_hits.yaml.erb
@@ -14,6 +14,18 @@
         - shell: |
             HOSTNAME=$(govuk_node_list -c backend --single-node)
             ssh deploy@$HOSTNAME "cd /var/apps/transition && govuk_setenv transition bundle exec rake import:all:hits[$BUCKET]"
+    publishers:
+      - trigger-parameterized-builds:
+          - project: Success_Passive_Check
+            condition: SUCCESS
+            predefined-parameters: |
+                NSCA_CHECK_DESCRIPTION=<%= @service_description %>
+                NSCA_OUTPUT=<%= @service_description %> success
+          - project: Failure_Passive_Check
+            condition: FAILE'
+            predefined-parameters: |
+                NSCA_CHECK_DESCRIPTION=<%= @service_description %>
+                NSCA_OUTPUT=<%= @service_description %> failed
     wrappers:
         - ansicolor:
             colormap: xterm
