Fix typos in transition job triggers

--- a/modules/govuk_jenkins/templates/jobs/transition_import_hits.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/transition_import_hits.yaml.erb
@@ -17,12 +17,12 @@
     publishers:
       - trigger-parameterized-builds:
           - project: Success_Passive_Check
-            condition: SUCCESS
+            condition: 'SUCCESS'
             predefined-parameters: |
                 NSCA_CHECK_DESCRIPTION=<%= @service_description %>
                 NSCA_OUTPUT=<%= @service_description %> success
           - project: Failure_Passive_Check
-            condition: FAILE'
+            condition: 'FAILED'
             predefined-parameters: |
                 NSCA_CHECK_DESCRIPTION=<%= @service_description %>
                 NSCA_OUTPUT=<%= @service_description %> failed
