Do not allow deploying CDN dictionaries to 'mirror' in integration
Integration doesn't have a mirror target, so this will fail.

--- a/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/update_cdn_dictionaries.yaml.erb
@@ -57,7 +57,9 @@
             choices:
                 - PLEASE CHOOSE ONE
                 - www
+                <% if @allow_deploy_to_mirror %>
                 - mirror
+                <% end %>
         - string:
             name: FASTLY_API_KEY
             default: false
