Add fqdn variable sent to jenkins as a parameter
When a new server comes up, it will run the govuk_sync_apps
bash script after being first puppetized. This script
used to send a message to Jenkins to deploy all the apps for this
node class to all servers of this node class.

This is not ideal when multiple servers of the same class are
coming and some servers are not ready for provisioning by Jenkins.
Therefore, we add another parameter "TARGET_MACHINES" to the
message to Jenkins which provides the FQDN of the sending server
so that now Jenkins provisions only this machine.

The "Deploy_node_apps" is modified to take this new parameter
and pass it to the modified app deployment job "deploy_apps".

--- a/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_app.yaml.erb
@@ -19,6 +19,7 @@
             export DEPLOY_TO="<%= @environment -%>"
             export DEPLOY_TASK="$DEPLOY_TASK"
             export TAG="$TAG"
+            export TARGET_MACHINES="$TARGET_MACHINES"
             export ORGANISATION="<%= @environment -%>"
             export CI_DEPLOY_JENKINS_API_KEY="<%= @ci_deploy_jenkins_api_key -%>"
             export GRAPHITE_HOST="<%= @graphite_host -%>"
@@ -81,6 +82,10 @@
                 - app:migrate
                 - app:hard_restart
                 - app:migrate_and_hard_restart
+        - string:
+            name: TARGET_MACHINES
+            description: Comma-delimited list of FQDN of the servers to deploy the app to.
+            default: all
         - string:
             name: TAG
             description: Git commit-ish (tag, branch name, commit hash) to deploy.
