--- a/modules/govuk_jenkins/templates/node_app_deploy.xml.erb
+++ b/modules/govuk_jenkins/templates/node_app_deploy.xml.erb
@@ -7,6 +7,15 @@
       <autoRebuild>false</autoRebuild>
       <rebuildDisabled>false</rebuildDisabled>
     </com.sonyericsson.rebuild.RebuildSettings>
+    <hudson.model.ParametersDefinitionProperty>
+      <parameterDefinitions>
+        <hudson.model.StringParameterDefinition>
+          <name>TARGET_MACHINES</name>
+          <description>FQDN of machine which called this jenkins job</description>
+          <defaultValue>all</defaultValue>
+        </hudson.model.StringParameterDefinition>
+      </parameterDefinitions>
+    </hudson.model.ParametersDefinitionProperty>
   </properties>
   <scm class="hudson.scm.NullSCM"/>
   <canRoam>true</canRoam>
@@ -28,6 +37,7 @@
             <hudson.plugins.parameterizedtrigger.PredefinedBuildParameters>
               <properties>TARGET_APPLICATION=<%= app %>
 DEPLOY_TASK=deploy:without_migrations
+TARGET_MACHINES=${TARGET_MACHINES}
 TAG=deployed-to-<%= @environment -%></properties>
             </hudson.plugins.parameterizedtrigger.PredefinedBuildParameters>
           </configs>
