--- a/modules/govuk_jenkins/templates/node_app_deploy.xml.erb
+++ b/modules/govuk_jenkins/templates/node_app_deploy.xml.erb
@@ -11,7 +11,8 @@
       <parameterDefinitions>
         <hudson.model.StringParameterDefinition>
           <name>TARGET_MACHINES</name>
-          <description>FQDN of machine which called this jenkins job</description>
+          <description> Use "all" to target all eligible servers or
+            provide a comma-delimited list of FQDN of the servers to deploy to.</description>
           <defaultValue>all</defaultValue>
         </hudson.model.StringParameterDefinition>
       </parameterDefinitions>
