Fixed endpoint name

--- a/modules/govuk/templates/ckan/nginx.conf.erb
+++ b/modules/govuk/templates/ckan/nginx.conf.erb
@@ -24,7 +24,7 @@
 
     # Additional endpoints requested by users
     "/action/package_search",
-    "/action/package_show",
+    "/action/package_list",
     "/action/harvest_source_list",
   ]
 -%>
