Switch many send_nsca calls to use ipaddress_eth0
Rather than ipaddress, as there's a danger when using Docker on the
respective machines that @ipaddress won't be the correct IP address to
send to Icinga.

--- a/modules/govuk/templates/node/s_asset_base/sync-assets.sh.erb
+++ b/modules/govuk/templates/node/s_asset_base/sync-assets.sh.erb
@@ -7,7 +7,7 @@ NCSA_OUTPUT="Assets sync failed"
 
 function send_nsca {
   NCSA_CHECK_DESCRIPTION="Local assets sync from master to slave"
-  printf "<%= @ipaddress %>\t$NCSA_CHECK_DESCRIPTION\t$NCSA_CODE\t$NCSA_OUTPUT\n" | /usr/sbin/send_nsca -H alert.cluster >/dev/null
+  printf "<%= @ipaddress_eth0 %>\t$NCSA_CHECK_DESCRIPTION\t$NCSA_CODE\t$NCSA_OUTPUT\n" | /usr/sbin/send_nsca -H alert.cluster >/dev/null
   exit $?
 }
 
