--- a/modules/backup/templates/etc/automysqlbackup/postbackup.erb
+++ b/modules/backup/templates/etc/automysqlbackup/postbackup.erb
@@ -9,7 +9,7 @@ else
   NAGIOS_MESSAGE="CRITICAL: unable to determine automysqlbackup status"
 fi
 
-printf "<%= @ipaddress %>\t<%= @service_desc %>\t$NAGIOS_CODE\t$NAGIOS_MESSAGE\n" \
+printf "<%= @ipaddress_eth0 %>\t<%= @service_desc %>\t$NAGIOS_CODE\t$NAGIOS_MESSAGE\n" \
   | /usr/sbin/send_nsca -H <%= @alert_hostname %> >/dev/null
 
 tar -C /var/lib/automysqlbackup -jcf /var/lib/automysqlbackup/tmp.tbz2 latest/
