--- a/modules/govuk/templates/node/s_asset_base/copy-attachments-to-slaves.sh.erb
+++ b/modules/govuk/templates/node/s_asset_base/copy-attachments-to-slaves.sh.erb
@@ -11,7 +11,7 @@ NAGIOS_MESSAGE="CRITICAL: Copy attachments to asset slaves failed"
 # Triggered whenever this script exits, successful or otherwise. The values
 # of CODE/MESSAGE will be taken from that point in time.
 function nagios_passive () {
-  printf "<%= @ipaddress %>\tCopy attachments to asset slaves\t${NAGIOS_CODE}\t${NAGIOS_MESSAGE}\n" | /usr/sbin/send_nsca -H <%= @alert_hostname %> >/dev/null
+  printf "<%= @ipaddress_eth0 %>\tCopy attachments to asset slaves\t${NAGIOS_CODE}\t${NAGIOS_MESSAGE}\n" | /usr/sbin/send_nsca -H <%= @alert_hostname %> >/dev/null
 }
 
 trap nagios_passive EXIT
