--- a/modules/govuk/templates/node/s_asset_base/process-uploaded-attachments.sh.erb
+++ b/modules/govuk/templates/node/s_asset_base/process-uploaded-attachments.sh.erb
@@ -42,7 +42,7 @@ CODE=0
 OUTPUT="Last run status processing $INCOMING_DIR"
 
 # Send a passive check to check the freshness threshold
-printf "<%= @ipaddress %>\tProcess attachments last run\t$CODE\t$OUTPUT\n" | /usr/sbin/send_nsca -H <%= @alert_hostname %> >/dev/null
+printf "<%= @ipaddress_eth0 %>\tProcess attachments last run\t$CODE\t$OUTPUT\n" | /usr/sbin/send_nsca -H <%= @alert_hostname %> >/dev/null
 
 # Clean up empty directories in `incoming` which have not been modified recently.
 find "$INCOMING_DIR" -mindepth 1 -type d -mmin +10 -empty -delete
