--- a/modules/mongodb/templates/mongodump-to-s3.erb
+++ b/modules/mongodb/templates/mongodump-to-s3.erb
@@ -18,7 +18,7 @@ AWS=$(command -v aws)
 # Triggered whenever this script exits, successful or otherwise. The values
 # # of CODE/MESSAGE will be taken from that point in time.
 function nagios_passive () {
-  printf "<%= @ipaddress %>\t<%= @service_desc %>\t${NAGIOS_CODE}\t${NAGIOS_MESSAGE}\n" | /usr/sbin/send_nsca -H <%= @alert_hostname %> >/dev/null
+  printf "<%= @ipaddress_eth0 %>\t<%= @service_desc %>\t${NAGIOS_CODE}\t${NAGIOS_MESSAGE}\n" | /usr/sbin/send_nsca -H <%= @alert_hostname %> >/dev/null
 }
 
 function housekeeping() {
